# termsurf

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  TODO.md  install.sh  package.json
.claude/agents/: adversarial-reviewer.md
assets/astrohacker-terminal/: README.md
blog/: 2026-03-15-how-not-to-build-a-terminal-browser.md
browser/src/: main.zig
chromium/: AGENTS.md  README.md
docs/: README.md  astrohacker-terminal-trademarks.md  cef-mvp3.md  cef-mvp5.md  chromium.md  early-prototypes.md  environment.md  ghostboard-launch-discovery.md  ghostty.md  girlbat-browser-api-probe-plan.md  girlbat-capabilities.md  girlbat-pdf-support.md  girlbat-protobuf-coverage.md  girlbat-render-surface-transport.md  girlbat-rendering-strategy.md  homebrew.md  keybindings.md  objc-to-objc2.md  ts3-1-architecture.md  ts3-2-webview.md  ts3-3-xpc.md  ts3-4-webpage.md  ts3-5-profile.md  ts3-6-resize.md  ts3-7-profile.md  vendor.md  web.md  xdg.md
docs/issues/: 311-resize.md  313-helper.md  314-control.md  315-mode.md  319-mouse.md  320-double-click.md  322-drag-selection.md  323-shift-click.md  324-cursor-feedback.md  325-webview-framerate.md  326-process-lifecycle.md  329-focus-lifecycle.md  330-multi-pane.md  331-termsurf.md  332-profile-reconnect.md  334-copy-url.md  336-background.md  337-refresh.md  338-lag.md  339-electron.md  341-performance.md  342-perf-no-win.md  343-optimal-performance.md  344-cef-test.md  346-mouse-performance.md  347-lingering-lag.md  348-cef-test-ceiling.md  349-bimodal.md  350-callback.md  401-architecture.md  403-swift-rust-cpp.md  404-terminal-emulator.md  407-chromium-poc.md  408-two-profiles.md  409-electron-patch.md  410-two-profiles-2.md  413-one-profile-2.md  414-two-profiles-xpc.md  415-swift-receiver.md  416-rust-receiver.md  (+94 more)
ghost/include/: ghostty.h
ghost/src/: Surface.zig
ghostboard/: README.md
ghostboard/include/: ghostty.h
ghostboard/macos/: Ghostty-Info.plist  Ghostty.sdef  build.nu
ghostboard/nix/: tests.nix
ghostboard/src/: main_c.zig  main_ghostty.zig
gtui/: Cargo.toml
gtui/app/: server.ts
gtui/src/: main.rs
gui/src/: Surface.zig
issues/: 0000715-wezboard.md  0000717-remove-cocoa-crate.md  0000718-finish-cocoa-removal.md  0000719-wezboard-code-smells.md  0000721-wgpu-upgrade.md  0000722-cargo-deps.md  0000723-pane-borders.md  0000724-wezboard-protocol.md  0000725-wezboard-overlay.md  0000726-wezboard-overlay-lifecycle.md  0000727-wezboard-second-webview.md  0000728-wezboard-remaining-protocol.md  0000729-wezboard-reposition-and-protocol.md  0000730-roamium-standalone-install.md  0000731-wezboard-scroll-crash.md  0000732-wezboard-reopen-tab.md  0000735-ghostboard-release-icon.md  0000736-roamium-process-leak.md  0000737-wezboard-icon.md  0000738-wezboard-text-selection.md  0000739-build-warnings.md  0000740-wezboard-display-name.md  0000741-protocol-split.md  0000742-archive-ghostboard.md  0000743-cmd-r-reload.md  0000744-website-icon.md  0000745-self-hosted-git.md  0000746-overlay-positioning.md  0000747-multiscreen-overlay.md  0000749-initial-overlay-flash.md  0000752-scroll-inactive-pane.md  0000754-screenshots.md  0000755-scroll-neovim.md  0000756-surfari.md  README.md  ts3-10-tabs.md  ts3-9-resize.md
issues/0000758-tui-message-routing/: README.md
issues/0000759-link-hover-url/: README.md
issues/0000760-cli-short-flags/: README.md
issues/0000762-persistent-cookies/: README.md
issues/0000763-scroll-initial/: README.md
issues/0314-control/: README.md
log/: ts3-8-resize.md
patches/: AGENTS.md  README.md  release-manifest.json
proto/: generate.sh  termsurf.proto
roamium/: build.rs
roastty/: ABI_INVENTORY.md  Cargo.toml
rust/: AGENTS.md
rust/ah-ladybirdd/libtermsurf_ladybird/probes/headless-lifecycle/: CMakeLists.txt  headless_lifecycle_probe.cpp
rust/ahsh/: Cargo.toml  README.md  build.rs
rust/ahsh/src/: command.rs  dispatcher.rs  env_merge_tests.rs  executor.rs  lib.rs  main.rs  run.rs  shell_engine.rs  zsh_process.rs
rust/ahsh/tests/: integration.rs
rust/ahweb/: Cargo.toml  README.md  build.rs
rust/ahweb/src/: ipc.rs  main.rs
scripts/: bounded-run.sh  browser-identity-probe.py  build-debug.sh  build-issues-index.sh  build-release.sh  build.sh  capture-devtools-screenshot.mjs  capture-pdf-interactions.mjs  chromium-resources.sh  deploy.sh  generate-icons.sh  ghostboard-geometry-matrix.sh  ghostboard-performance-smoke.sh  install.sh  probe-pdf-advanced.mjs  release.sh  rename-wezterm.sh  surfari-resources.sh  test-issue-26062812000867-installed-cross-engine-runtime.sh  test-issue-26062812000867-release-no-env-browser-discovery.sh  test-issue-26062812000869-installed-homebrew-browser-smoke.sh  test-issue-26062812000870-surfari-cursor-hover.sh  test-issue-26062812000871-installed-homebrew-cursor-smoke.sh  test-issue-26063012000872-installed-homebrew-scroll-smoke.sh  test-issue-26070112000882-installed-cold-start.sh  test-issue-756-surfari-fake-gui.py  test-issue-776-pdf.sh  test-issue-792-devtools-screenshot.sh  test-issue-792-fake-gui.py  test-issue-794-pdf-interactions.sh  test-issue-794-real-wheel.sh  test-issue-799-browser-api-audit.py  test-issue-834-pdf-advanced.py  test-issue-834-pdf-native-print.py  test-issue-834-roamium-pdf-regression.py  test-issue-834-surfari-cacontext-hosting.sh  test-issue-834-surfari-pdf-selection-copy.sh  test-ladybird-engine-probe.sh  test-ladybird-ghostboard-runtime-smoke.sh  uninstall.sh
surfari/: build.rs
test-html/: server.ts
ts3/: README.md
ts4/: Cargo.toml
ts4/two-profiles-rust/: Cargo.toml  com.termsurf.two-profiles-rust.plist
ts4/two-profiles-rust/src/: main.rs  shaders.wgsl
tui/: Cargo.toml
webkit/: AGENTS.md  README.md
website/: CLAUDE.md  Dockerfile  astro.config.mjs  package.json
webtui/: Cargo.toml  build.rs
wezboard/: Cargo.toml
(+3010 files in other folders)
