[workspace]
members = [
    "rust/ahweb",
    "rust/ah-chromiumd",
]
exclude = [
    "rust/ahsh",
    "vendor",
    "rust/proto/test-rust",
    "forks",
    "patches",
    "scripts",
    "bun",
    "docs",
    "node_modules",
    "target",
    "dist",
    "logs",
    "assets",
    "skills",
]
resolver = "2"
